--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div></div>
            </div>
            <div class="content_decreption">
-            <h3>Lorem ipsum dolor sit asmet</h3>
+            <h3 class="content_h3">Lorem ipsum dolor sit asmet</h3>
             <p class="contnent_about">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tristique consequat placerat. Vestibulum auctor pellentesque sem, eu posuere erat hendrerit quis. Maecenas vel consequat turpis. Nam facilisis, ligula in mattis sodales, augue justo tristique nulla, sed lacinia ante eros ut mi. Morbi vitae diam augue. Aliquam vel mauris a nibh auctor commodo. Praesent et nisi eu justo eleifend convallis. Quisque suscipit maximus vestibulum. Phasellus congue mollis orci, sit amet luctus augue tristique eu. Donec vulputate odio neque, sed semper turpis pellentesque a.</p>
            </div>
            <div class="content_optione">
@@ -54,7 +54,7 @@
            </div>
            <div class="content_optione">
             <div class="content_select-optione">
-                <h3>Lorem ipsum dolor sit amet</h3>
+                <h3 >Lorem ipsum dolor sit amet</h3>
                 <div class="content_optione-css">
                     <img src="./img/css.png"/>
                     <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non dui sodales, faucibus libero ut, posuere felis. Donec imperdiet suscipit accumsan. Aenean consequat condimentum velit ut tempor. Nam porta massa in metus bibendum congue. Pellentesque ultrices liquam egestas nunc at </span>
